DOC: Add discussion of nexus chart options and CVE on old chart / image